# zotero-fulltext

./: .codex-mcp.json  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ZOTERO-CONTEXT-PLAN.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
commands/: find.md  lookup.md  read.md  within.md
scripts/: benchmark.py  run-server.sh
skills/find/: SKILL.md
skills/lookup/: SKILL.md
skills/read/: SKILL.md
skills/within/: SKILL.md
src/zotero_fulltext/: __init__.py  __main__.py  cache.py  client.py  config.py  errors.py  index.py  models.py  server.py  service.py  text.py
tests/: test_index.py  test_service.py  test_text.py
