[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "zotero-fulltext"
version = "0.1.0"
description = "Fast fulltext Zotero MCP for Codex and Claude."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Rico" }
]
dependencies = [
  "fastmcp>=3.0.0,<4.0.0"
]
keywords = ["mcp", "zotero", "claude", "codex", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing",
]

[project.scripts]
zotero-fulltext = "zotero_fulltext.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_fulltext"]
